[gd_scene load_steps=16 format=3 uid="uid://dfjry6qqtrqd6"]

[ext_resource type="Script" path="res://scenes/gameplay_scenes/cooking_mini_game/area_2d.gd" id="1_5cav8"]
[ext_resource type="Texture2D" uid="uid://b3ibr008hxvkh" path="res://scenes/gameplay_scenes/cooking_mini_game/assets/counter.png" id="1_caplo"]
[ext_resource type="PackedScene" uid="uid://bsnkeuwbelwou" path="res://scenes/gameplay_scenes/cooking_mini_game/mushroom.tscn" id="3_pm2kx"]
[ext_resource type="PackedScene" uid="uid://c1air8h2xo8we" path="res://scenes/gameplay_scenes/cooking_mini_game/garlic.tscn" id="4_2ja0j"]
[ext_resource type="PackedScene" uid="uid://coy5hqh7nwvkl" path="res://scenes/gameplay_scenes/cooking_mini_game/butter.tscn" id="5_l2lsw"]
[ext_resource type="Script" path="res://scenes/gameplay_scenes/cooking_mini_game/garlic.gd" id="7_bp1rw"]
[ext_resource type="FontFile" uid="uid://b7ifwnhbxq6y5" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="8_joskm"]
[ext_resource type="Script" path="res://scenes/gameplay_scenes/cooking_mini_game/mushroom.gd" id="8_patd2"]
[ext_resource type="Script" path="res://scenes/gameplay_scenes/cooking_mini_game/butter.gd" id="9_w5g8j"]
[ext_resource type="Texture2D" uid="uid://f4a5kyl64epc" path="res://assets/ui/text box/speech_bubble.png" id="9_xpmrs"]
[ext_resource type="FontFile" uid="uid://baqxnk61g1qva" path="res://assets/fonts/PixelOperator8.ttf" id="11_e1to4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njprm"]
size = Vector2(363, 246.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uftix"]
size = Vector2(52.439, 40.2439)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wtnpj"]
radius = 13.4146
height = 61.9512

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m48gm"]
size = Vector2(54.8781, 20)

[node name="Cooking" type="Node2D"]

[node name="Counter" type="Sprite2D" parent="."]
position = Vector2(509, 291)
scale = Vector2(4.1, 4.1)
texture = ExtResource("1_caplo")

[node name="board" type="Area2D" parent="."]
script = ExtResource("1_5cav8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="board"]
position = Vector2(768.5, 267.75)
shape = SubResource("RectangleShape2D_njprm")

[node name="ItemContainer" type="Node" parent="."]

[node name="mushroom" parent="ItemContainer" instance=ExtResource("3_pm2kx")]
position = Vector2(101, 374)

[node name="mushroom2" parent="ItemContainer" instance=ExtResource("3_pm2kx")]
position = Vector2(138, 371)

[node name="mushroom3" parent="ItemContainer" instance=ExtResource("3_pm2kx")]
position = Vector2(176, 370)

[node name="garlic" parent="ItemContainer" instance=ExtResource("4_2ja0j")]

[node name="garlic2" parent="ItemContainer" instance=ExtResource("4_2ja0j")]
position = Vector2(398, 252)

[node name="garlic3" parent="ItemContainer" instance=ExtResource("4_2ja0j")]
position = Vector2(436, 251)

[node name="garlic4" parent="ItemContainer" instance=ExtResource("4_2ja0j")]
position = Vector2(469, 247)

[node name="garlic5" parent="ItemContainer" instance=ExtResource("4_2ja0j")]
position = Vector2(507, 249)

[node name="garlic6" parent="ItemContainer" instance=ExtResource("4_2ja0j")]
position = Vector2(370, 292)

[node name="butter" parent="ItemContainer" instance=ExtResource("5_l2lsw")]

[node name="butter2" parent="ItemContainer" instance=ExtResource("5_l2lsw")]
position = Vector2(181, 201)

[node name="Label" type="Label" parent="."]
offset_left = 596.0
offset_top = 94.0
offset_right = 665.0
offset_bottom = 115.0
text = "Items: "

[node name="garlic" type="Area2D" parent="."]
position = Vector2(509, 291)
scale = Vector2(4.1, 4.1)
script = ExtResource("7_bp1rw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="garlic"]
position = Vector2(-18.6585, 5.48781)
shape = SubResource("RectangleShape2D_uftix")

[node name="mushroom" type="Area2D" parent="."]
position = Vector2(509, 291)
scale = Vector2(4.1, 4.1)
script = ExtResource("8_patd2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mushroom"]
position = Vector2(-80.9756, 23.1707)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wtnpj")

[node name="butter" type="Area2D" parent="."]
position = Vector2(115, 227)
scale = Vector2(4.1, 4.1)
script = ExtResource("9_w5g8j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="butter"]
position = Vector2(17.439, 0)
shape = SubResource("RectangleShape2D_m48gm")

[node name="UI" type="CanvasLayer" parent="."]

[node name="garlic" type="MarginContainer" parent="UI"]
offset_left = 352.0
offset_top = 369.0
offset_right = 424.0
offset_bottom = 409.0

[node name="NinePatchRect" type="NinePatchRect" parent="UI/garlic"]
layout_mode = 2
texture = ExtResource("9_xpmrs")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="UI/garlic"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="UI/garlic/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_fonts/font = ExtResource("8_joskm")
text = "Test"

[node name="mushroom" type="MarginContainer" parent="UI"]
offset_left = 67.0
offset_top = 407.0
offset_right = 139.0
offset_bottom = 447.0

[node name="NinePatchRect" type="NinePatchRect" parent="UI/mushroom"]
layout_mode = 2
texture = ExtResource("9_xpmrs")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="UI/mushroom"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="UI/mushroom/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_fonts/font = ExtResource("8_joskm")
text = "Test"

[node name="butter" type="MarginContainer" parent="UI"]
offset_left = 91.0
offset_top = 242.0
offset_right = 163.0
offset_bottom = 282.0

[node name="NinePatchRect" type="NinePatchRect" parent="UI/butter"]
layout_mode = 2
texture = ExtResource("9_xpmrs")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="UI/butter"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="UI/butter/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_fonts/font = ExtResource("8_joskm")
text = "Test"

[node name="recipe" type="MarginContainer" parent="UI"]
offset_left = 42.0
offset_top = 38.0
offset_right = 252.0
offset_bottom = 126.0

[node name="NinePatchRect" type="NinePatchRect" parent="UI/recipe"]
layout_mode = 2
texture = ExtResource("9_xpmrs")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="UI/recipe"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/recipe/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/recipe/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_fonts/font = ExtResource("8_joskm")
text = "RECIPE:"

[node name="butter" type="Label" parent="UI/recipe/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_fonts/font = ExtResource("11_e1to4")
text = "1 / 2 Butter"

[node name="mushroom" type="Label" parent="UI/recipe/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_fonts/font = ExtResource("11_e1to4")
text = "1 / 3 Mushroom"

[node name="garlic" type="Label" parent="UI/recipe/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_fonts/font = ExtResource("11_e1to4")
text = "1 / 6 Garlic"

[connection signal="body_entered" from="board" to="board" method="_on_body_entered"]
[connection signal="body_exited" from="board" to="board" method="_on_body_exited"]
[connection signal="body_entered" from="garlic" to="garlic" method="_on_body_entered"]
[connection signal="body_exited" from="garlic" to="garlic" method="_on_body_exited"]
[connection signal="body_entered" from="mushroom" to="mushroom" method="_on_body_entered"]
[connection signal="body_exited" from="mushroom" to="mushroom" method="_on_body_exited"]
[connection signal="body_entered" from="butter" to="butter" method="_on_body_entered"]
[connection signal="body_exited" from="butter" to="butter" method="_on_body_exited"]
